--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ttult.github.io/my-af-site/"
+baseURL = "https://www.ultimateroom.net"
 languageCode = "ja"
 title = "Ultimate ROOM"
 theme = "PaperMod"
