--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.ultimateroom.net"
+baseURL = "https://PLACEHOLDER.com/"
 languageCode = "ja"
 title = "Ultimate ROOM"
 theme = "PaperMod"
