--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     # ==========================================================
     # 🚨 必須の修正: Environment の指定 🚨
     # ==========================================================
-    environment: github-pages # 👈 この行を追加することで Variables が読み込まれます
+    environment: github-pages # 👈 この行を追加することで Variables が読み込まれる
     
     steps:
       - name: Checkout repository
